K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-app
  namespace: devops-demo
  labels:
    app: devops-demo-app
spec:
  type: ClusterIP
  selector:
    app: devops-demo-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
